policies/validate-disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-disallow-latest
  annotations:
    policies.kyverno.io/title: Disallow Latest Image Tag
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-explicit-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Les images avec le tag latest sont interdites. Utilise une version explicite."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
