policies/validate-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-run-as-non-root
  annotations:
    policies.kyverno.io/title: Require Run As Non Root
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Le pod doit être configuré avec runAsNonRoot: true."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
